--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 <body>
 	<div style="position: relative; display: inline-block">
+		<div style="position: absolute; padding-left: 39%; padding-top: 7%">
+			DHC
+		</div>
+		<div style="position: absolute; padding-left: 56.5%; padding-top: 7%">
+			Ahnaf
+		</div>
 		<div
 			style="
 				position: absolute;
